--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 /* ----------- NAVBAR ----------- */
 .navbarBg{
     background-color: #fff382;
@@ -12,6 +16,7 @@
 }
 .logo img {
     padding-right: 7px;
+    width: 60px;
 }
 .iconeCar {
     background-image: url('cart3.svg');
